Can now map from/to invokes Invokes are collapsed and resized correctly ...

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -17,3 +17,11 @@
 	-fx-fill: null;
 	-fx-stroke: #000000;
 }
+
+.existent {
+	-fx-background-color: #f5ed9a;
+}
+
+.nonExistent {
+	-fx-background-color: #ffb8bf;
+}
